--- a/client/src/app/page.module.css
+++ b/client/src/app/page.module.css
@@ -36,17 +36,10 @@
 }
 
 a.navbuttons {
-<<<<<<< Updated upstream
-  padding-top: 0px;
-  padding-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-=======
-  padding-top: 15px;
-  padding-bottom: 0px;
+  padding-top: 14px;
+  padding-bottom: 14px;
   padding-left: 11vw;
-  padding-right: 5vw;
->>>>>>> Stashed changes
+  padding-right: 24px;
 }
 
 a.logo {
@@ -64,33 +57,6 @@ a.logo {
   background-color: #FFC7C2;
   text-align: center;
   margin: auto;
-<<<<<<< Updated upstream
-=======
-  position: relative;
-  line-height: 15vh;
-}
-
-.fronttext {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  position: absolute;
-}
-
-.frontbanner {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  position: absolute;
-}
-
-.itinerary {
-  height: 75vh;
-  width: 100%;
-  background-color: aquamarine;
-  text-align: center;
-  margin: auto;
->>>>>>> Stashed changes
   position: absolute;
   line-height: 15vh;
 }
@@ -101,6 +67,16 @@ a.logo {
   color: #ffffff;
   vertical-align: middle;
   font-family: header-font;
+}
+
+.itinerary {
+  height: 75vh;
+  width: 100%;
+  background-color: #FFC7C2;
+  text-align: center;
+  margin: auto;
+  position: absolute;
+  line-height: 15vh;
 }
 
 /* media adjust for font-size when the window is vertically shortened, FIX needed */
