--- a/client/src/app/page.module.css
+++ b/client/src/app/page.module.css
@@ -97,8 +97,6 @@ a.logo {
 }
 
 .loginmodal, .logincontent {
-  width: 100vw;
-  height: 100vh;
   top: 0;
   left: 0;
   right: 0;
@@ -115,15 +113,41 @@ a.logo {
 
 .logincontent {
   position: absolute;
-  top: 43%;
-  left: 50%;
-  width: 30vw;
-  height: 65vh;
+  left: 50%;  
+  width: 460px;
+  height: 450px;
   transform: translate(-50%, -50%);
   background: rgb(255, 255, 255);
   border-radius: 25px;
   line-height: 4vh;
   padding-top: 20px;
+}
+
+.signup {
+  display: inline-flex;
+  text-align: center;
+  padding-top: 5px;
+  font-size: 15px;
+  padding-left: 0px;
+  left: 0px;
+  right: 50px;
+  gap: 13px;
+}
+
+.signup h4 {
+  font-family: thin-font;
+  transform: scale(1.07, 1);
+  color: black;
+}
+
+.signup h5 {
+  font-family: bold-font;
+  font-size: 15px;
+  transform: scale(1.07, 1.05);
+}
+
+.signup h5:hover {
+  cursor: pointer;
 }
 
 .logincontent h1 {
@@ -147,12 +171,7 @@ a.logo {
   padding-left: 14px;
 }
 
-.logininfo input {
-  width: 26vw;
-  height: 6vh;
-  font-size: 20px;
-  border-radius: 10px;
-}
+
 
 .logininfo button {
   background-color: black;
@@ -161,19 +180,218 @@ a.logo {
   font-size: 20px;
   padding-left: 12px;
   text-align: center;
-  width: 26vw;
-  height: 6vh;
+  width: 400px;
+  height: 45px;
   border-radius: 10px;
+}
 
+.logininfo button:hover {
+  cursor: pointer;
+}
+
+.signin button:hover {
+  background-color: rgb(122, 122, 122);
+}
+
+.signin button:active {
+  background-color: rgb(122, 122, 122);
+  font-size: 18px;
+}
+
+.signupButton button {
+  background-color: black;
+  color: black;
+  font-family: bold-font;
+  font-size: 20px;
+  text-align: center;
+  width: 400px;
+  height: 45px;
+  border-radius: 10px;
+  background-color: #FFC7C2;
+}
+
+.signupButton button:hover {
+  background-color: #e1b1ac;
+  cursor: pointer;
+}
+
+.signupButton button:active {
+  background-color: aliceblue;
+  color: black;
+  font-size: 18px;
 }
 
 .logininfo {
-  width: 100%;
-  height: 100%;
   text-align: left;
-  padding-left: 30px;
+  padding-left: 31px;
+}
 
-  line-height: 5vh;
+.logininfoboxes {
+  width: 100%;
+  position: relative;
+
+  background-color: rgb(0, 0, 0);
+}
+
+.passwordbox {
+  display: absolute;
+
+  background-color: rgb(255, 255, 255);
+  bottom: 50px;
+  width: 100%;
+}
+
+.passwordinput {
+  display: flex;
+  border-width: 2px;
+  border-radius: 18px;
+
+  width: 400px;
+  height: 40px;
+  border-style: solid;
+}
+
+.passwordinput input {
+  width: 100%;
+  border-radius: 18px;
+  font-size: 18px;
+
+  border: none;
+  outline: none;
+}
+
+.passwordbox input {
+  width: 400px;
+  outline: none;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.passwordbutton {
+  padding-right: 3px;
+}
+
+.passwordbutton button {
+  width: 23px;
+  height: 35px;
+  padding-right: 30px;
+  padding-bottom: 2px;
+
+  background-color: rgba(255, 255, 255, 0);
+  outline: none;
+  border: none;
+  padding-top: 5px;
+}
+
+.passwordhide {
+  width: 25px;
+}
+
+.forgotpass h5 {
+  font-family: thin-font;
+  color: rgb(122, 122, 122);
+  transform: scale(1.07, 1);
+  font-size: 14px;
+}
+
+.forgotpass h5:hover {
+  cursor: pointer;
+}
+
+.recoveryregister {
+  text-align: center;
+  background-color: white;
+}
+
+.registerPanel {
+  background-color: white;
+  text-align: center;
+}
+
+.rrContainer {
+  background-color: white;
+  width: 550px;
+  height: 170px;
+  border-radius: 25px;
+  border: solid;
+  border-color: rgb(176, 176, 176);
+  border-width: 2px;
+  line-height: 25px;
+
+  margin: auto;
+}
+
+.registerContainer {
+  background-color: white;
+  width: 460px;
+  height: 450px;
+  border-radius: 25px;
+  border: solid;
+  border-color: rgb(176, 176, 176);
+  border-width: 2px;
+  line-height: 25px;
+
+  margin: auto;
+}
+
+.registerOvertext {
+  padding-left: 22px;
+  padding-right: 22px;
+}
+
+.rrContainer h3 {
+  margin-top: 20px;
+}
+
+.recoveryInputs {
+  text-align: center;
+  margin: auto;
+
+  display: inline-flex;
+  gap: 10px;
+}
+
+.recoveryInputs button {
+  width: 50px;
+  height: 40px;
+  border-radius: 25px;
+  background-color: #FFC7C2;
+}
+
+.recoveryInputs img {
+  padding-top: 2px;
+}
+
+.recoveryInputs button:hover {
+  background-color: #e1b1ac;
+  cursor: pointer;
+}
+
+.recoveryInputs button:active {
+  background-color: aliceblue;
+}
+
+.emailsubmission {
+  text-align: center; 
+  margin: auto;
+}
+
+.emailsubmission h3 {
+  color: #3DCF56;
+  padding-top: 1px; 
+  font-size: 14px;
+  font-family: bold-font;
+  transform: scale(1.07, 1.05);
+
+}
+
+.emailsubmission h5 {
+  color: #3DCF56;
+  padding-top: 1px; 
+  font-size: 14px;
+  font-family: thin-font;
+  transform: scale(1.07, 1);
+
 }
 
 .front p {
@@ -207,240 +425,3 @@ a.logo {
     text-size-adjust: auto;
   }
 }; 
-
-/*
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-*/
-
-/* Enable hover only on non-touch devices */
-/*
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
-}
-*/
-/* Mobile */
-/*
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-*/
-/* Tablet and Smaller Desktop */
-/*
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
-*/
