--- a/client/src/app/page.module.css
+++ b/client/src/app/page.module.css
@@ -119,7 +119,7 @@ a.logo {
   transform: translate(-50%, -50%);
   background: rgb(255, 255, 255);
   border-radius: 25px;
-  line-height: 4vh;
+  line-height: 27px;
   padding-top: 20px;
 }
 
@@ -137,7 +137,6 @@ a.logo {
 .signup h4 {
   font-family: thin-font;
   transform: scale(1.07, 1);
-  color: black;
 }
 
 .signup h5 {
@@ -205,7 +204,7 @@ a.logo {
   font-size: 20px;
   text-align: center;
   width: 400px;
-  height: 45px;
+  height: 40px;
   border-radius: 10px;
   background-color: #FFC7C2;
 }
@@ -324,7 +323,7 @@ a.logo {
 .registerContainer {
   background-color: white;
   width: 460px;
-  height: 450px;
+  height: 420px;
   border-radius: 25px;
   border: solid;
   border-color: rgb(176, 176, 176);
@@ -418,10 +417,375 @@ a.logo {
   line-height: 15vh;
 }
 
+.startContainer {
+  display: flex;
+  flex-flow: column;
+  height: 93%;
+}
+
+.startbg {
+  flex: 1 1 auto;
+  background-color: #FFF5F4;
+}
+
+.col1 {
+  width: 40%;
+
+  padding-left: 50px;
+  padding-top: 25px;
+  padding-right: 50px;
+}
+
+@media all and (min-width: 1441px) {
+  .col1 {
+    width: 40%;
+  }
+}
+
+@media all and (max-width: 1440px) {
+  .col1 {
+    padding-right: 50px;
+    width: 100%;
+  }
+}
+
+.col2 {
+  width: 60%;
+  padding-top: 25px;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+.col2 h2 {
+  background-color: #FFC7C2;
+  padding: 5px 20px 5px 20px;
+  display: inline-block;
+  font-size: 27px;
+
+  border-style: solid;
+  border-color: #DA8D87;
+  border-width: 5px;
+  border-radius: 25px;
+
+  color: white;
+  font-family: bold-font;
+  paint-order: stroke fill;
+  -webkit-text-stroke: 10px #DA8D87; 
+  
+  margin-left: 75%;
+  text-align: right;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.col2 h2:hover {
+  background-color: #DA8D87;
+  cursor: pointer;
+}
+
+@media all and (min-width: 1441px) {
+  .col2 {
+    width: 60%;
+  }
+}
+
+@media all and (max-width: 1440px) {
+  .col2 {
+    width: 100%;
+  }
+}
+
+.datePickers {
+  padding-left: 10px;
+}
+
+.initDatePick {
+  padding-bottom: 15px;
+}
+
+.datePickers button {
+  padding: 5px 5px 5px 5px;
+  background-color: white;
+  color: #82D9E5;
+  border-style: solid;
+  border-width: 2px;
+  font-size: 18px;
+  width: 25%;
+  font-family: bold-font;
+  border-radius: 10px;
+  border-color: #82D9E5;
+}
+
+.datePickers h4 {
+  font-family: thin-font;
+  transform: scale(1.18, 1);
+
+  width: 50%;
+  border-bottom: solid;
+  text-align: center;
+  margin: auto;
+  padding-bottom: 8px;
+  font-size: 18px;
+}
+
+.datePickers button:hover {
+  background-color: #82D9E5;
+  color: white;
+  border-color: #82D9E5;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.headerWrapper {
+  background-color: #FFC7C2;
+  padding: 20px 20px 20px 20px;
+  display: inline-block;
+  font-size: 37px;
+
+  border-style: solid;
+  border-width: 0px;
+  border-radius: 25px;
+
+  color: white;
+  font-family: bold-font;
+  paint-order: stroke fill;
+  -webkit-text-stroke: 10px #DA8D87; 
+}
+
+.col1 h1 {
+  font-family: bold-font;
+  display: inline-block;
+
+  font-size: 36px;
+
+  color: white;
+}
+
+.col2 h1 {
+  font-family: bold-font;
+  display: inline-block;
+
+  font-size: 36px;
+
+  color: white;
+}
+
+.col1Container {
+  display: block;
+}
+
+.destinationHeader {
+  padding-top: 30px;
+}
+
+.destinationHeader h1 {
+  color: white;
+  font-size: 20px;
+  background-color: #FFC7C2;
+
+  padding: 10px 10px 10px 10px;
+  border-style: solid;
+  border-width: 0px;
+  border-radius: 25px;
+}
+
+.destinationContainer, .budgetContainer, .datesContainer, .selectedDayHead {
+  color: black;
+  background-color: white;
+  border-style: solid;
+  border-width: 5px;
+  border-radius: 25px;
+  border-color: #FFC7C2;
+
+  padding: 10px 10px 10px 10px;
+}
+
+.budgetContainer {
+  display: flex;
+  text-align: center;
+}
+
+.datesContainer {
+  text-align: center;
+}
+
+.calendarContainer {
+  margin: auto;
+}
+
+.initDatePick, .finalDatePick {
+  display: flex;
+}
+
+.budgetContainer h3 {
+  margin: auto;
+  width: auto;
+}
+
+.budgetContainer input {
+  border-style: none;
+  border-bottom: solid;
+  height: 25px;
+  width: 100%;
+
+
+  font-size: 25px;
+  font-family: bold-font;
+}
+
+.destination {
+  display: flex;
+}
+
+.destinationCol1, .destinationCol2 {
+  padding: 10px 10px 10px 10px;
+  font-size: 20px;
+  font-family: bold-font;
+  width: 50%;
+}
+
+.destinationCol2 input {
+  width: 100%;
+  height: 30px;
+  background-color: white;
+
+  border-style: solid;
+  border-radius: 10px;
+  border-width: 2px;
+  border-color: black;
+
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.destinationCol2 button {
+  width: 100%;
+  height: 30px;
+  background-color: white;
+  text-align: center;
+
+  font-size: 13px;
+
+  border-style: solid;
+  border-radius: 10px;
+  border-width: 3px;
+  border-color: black;
+
+  font-family: bold-font;
+}
+
+.destinationCol2 button:hover {
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.itCol1 {
+  width: 25%;
+  padding: 20px 10px 20px 10px;
+  background-color: white;
+  border-radius: 20px;
+  border-style: solid;
+  border-width: 0px;
+}
+
+.itCol1 h1 {
+  padding: 20px 20px 20px 20px;
+  display: inline-block;
+  font-size: 25px;
+
+  border-style: solid;
+  border-width: 0px;
+  border-radius: 25px;
+
+  color: white;
+  font-family: bold-font;
+  paint-order: stroke fill;
+  -webkit-text-stroke: 10px #DA8D87; 
+}
+
+.itDaySelect {
+  width: 100%;
+  font-family: bold-font;
+  font-size: 20px;
+  text-align: left;
+  padding-left: 10px;
+  height: 75px;
+}
+
+.itDaySelect:hover {
+  background-color: lightgray;
+  border-style: solid;
+  border-width: 0px;
+  border-radius: 25px;
+}
+
+.selectedDayHead {
+  padding: 20px 20px 20px 20px;
+  display: inline-block;
+  font-size: 25px;
+
+  border-style: solid;
+  border-width: 0px;
+  border-radius: 25px;
+
+  margin: auto;
+
+  color: white;
+  font-family: bold-font;
+  paint-order: stroke fill;
+  -webkit-text-stroke: 10px #DA8D87; 
+}
+
+.itEvent {
+  width: 100%;
+  border-radius: 15px;
+  border-color: #FFC7C2;
+  background-color: white;
+  border-style: solid;
+}
+
+.addEvent {
+  background-color: rgb(158, 158, 158);
+  color: rgb(106, 106, 106);
+  border-color: rgb(106, 106, 106);
+}
+
+.addPlusButton {
+  width: 10%;
+  text-align: center;
+  margin: auto;
+}
+
+.addMoreText {
+  width: 90%;
+  text-align: center;
+  margin: auto;
+}
+
+.basetext {
+  -webkit-text-stroke: 2px #ffffff; 
+}
+
+.stroke {
+  -webkit-text-stroke: 10px #DA8D87; 
+}
+
 /* media adjust for font-size when the window is vertically shortened, FIX needed */
 @media (max-height:1920px) and (min-height:400px) {
   .front p {
     font-size: calc(1rem);
     text-size-adjust: auto;
   }
-}; 
+}
+
+@media all and (min-width: 1441px) {
+  .startbg {
+    display: flex;
+  }
+}
+
+@media all and (max-width: 1440px) {
+  .startbg {
+    display: block;
+  }
+}
